# customer-support

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
app/: .env.example  create_tables.sql  gameshop_faq.csv  import_faqs.py  main.py  pyproject.toml  run_bots.py
app/api/: dependencies.py
app/api/private/: __init__.py  admins.py  faq.py  issues.py
app/api/public/: __init__.py  issues.py
app/database/: realtime_handler.py  supabase_db.py
app/models/: admin.py  faq.py  issue.py
app/services/: admin_service.py  faq_service.py  issue_service.py  openai_service.py
app/telegram/: aiogram_admin_bot.py  aiogram_bot.py
app/telegram/client/: api_client.py
